/**
 * Copyright (C) 2018 Nordstrom, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

import "google/protobuf/timestamp.proto";

package nordstrom.gatekeeper;
option java_multiple_files = true;
option java_package = "com.nordstrom.gatekeeper";
option java_outer_classname = "GatekeeperProto";

message SinglePermission {
  string permission = 1;
}

message MultiplePermissions {
  repeated string permission = 1;
}

message AuthorizationRequest {
  string subject_id = 1;
  oneof permission {
    SinglePermission single = 11;
    MultiplePermissions multiple = 12;
  }
}

message AuthorizationSuccess {
  map<string, bool> permissions = 1;
  google.protobuf.Timestamp cache_ttl = 2;
}

message AuthorizationError {
  string message = 1;
}

message AuthorizationResponse {
  oneof response {
    AuthorizationSuccess success = 1;
    AuthorizationError error = 2;
  }
}

service Gatekeeper {
  rpc authorize(AuthorizationRequest) returns (AuthorizationResponse);
}
